<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cadastro_Activity"
    android:backgroundTint="@color/white">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="74dp" />

    <Button
        android:id="@+id/btnDadosPessoais"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#000000"
        android:text="@string/dados_basicos"
        android:textColor="@color/white"
        app:cornerRadius="@dimen/cardview_compat_inset_shadow"
        android:textSize="11sp"
        app:layout_constraintBottom_toTopOf="@+id/ContainerCadastro"
        app:layout_constraintEnd_toStartOf="@+id/Linha1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <Button
        android:id="@+id/btnDadosAcademicos"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#000000"
        android:text="@string/dados_academicos"
        app:cornerRadius="@dimen/cardview_compat_inset_shadow"
        android:textColor="@color/white"
        android:textSize="11sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/Linha1"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <Button
        android:id="@+id/btnDadosProfissionais"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#000000"
        android:text="@string/dados_profissionais"
        android:textColor="@color/white"
        android:textAlignment="gravity"
        android:gravity="fill"
        android:textSize="11sp"
        app:cornerRadius="@dimen/cardview_compat_inset_shadow"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/Linha1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/ContainerCadastro"
        android:name="com.example.pssfacil.Fragments.DadosPessoais_Fragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <Button
        android:id="@+id/btnTermos"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#000000"
        android:text="@string/termos"
        app:cornerRadius="@dimen/cardview_compat_inset_shadow"
        android:textSize="11sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnDadosProfissionais"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.0013679891" />


</androidx.constraintlayout.widget.ConstraintLayout>